[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fordpass"
dynamic = ["version"]
description = "Python wrapper for the FordPass API for Ford vehicle information and control: start, stop, lock, unlock."
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
authors = [
    { name = "Dave Clarke", email = "info@daveclark.me" },
    { name = "Bill McDonough", email = "wilmcd@gmail.com" },
]
dependencies = [
    "requests"
]

[tool.setuptools.dynamic]
version = {attr = "fordpass.__version__"}

[tool.bumpversion]
current_version = "0.0.5"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "fordpass/__init__.py"
search = "__version__: str = \"{current_version}\""
replace = "__version__: str = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "**Unreleased**"
replace = "**Unreleased**\n\n**v{new_version}**"